refactor: extract shared cloud speech executor and sweep synthesis, docs, tooling